--- a/index.html
+++ b/index.html
@@ -17,14 +17,9 @@
     <br>
     <h7>Kannattaa jo hyvissä ajoin poistua.</h7>
   
-    <div class="cookie" style="display: block">
-        <h1>Emme arvosta yksityisyyttäsi.</h1>
-        <button onclick="cookies()" style="width: 200px; height: 40px">Ymmärrän, ja haluan jatkaa</button>
-    </div>
-<div class="osio" style="display: none">
+<div class="osio">
     <h1>Tervetuloa sivulleni!</h1>
     <p>Muille sivuille pääsee kuvia klikkaamalla.</p>
-    
     <div class="child">
         <h2>Kuka olen?</h2>
         <a href="kukaolen.html">
@@ -44,10 +39,4 @@
 </div>
 @Henri Mykrä TiVi21A
 </body>
-<script>
-    function cookies() {
-        document.querySelector(".cookie").style.display = "none";
-        document.querySelector(".osio").style.display = "block"
-    }
-</script>
 </html>
