--- a/harrastukseni.html
+++ b/harrastukseni.html
@@ -21,17 +21,16 @@
             <h2 style="color: white">Tästä syystä opiskelen tieto- ja viestintäteknikkaa.</h2>
             <h2 style="color: white">Pelaan paljon videopelejä. Suosikkejani ovat tällä hetkellä EU4, Dirt Rally 2.0 ja Dark Soulsit</h2>
             <h2 style="color: white">Tykkään myös kokata, rassata autoja, kuunnella musiikkia.</h2>
-            <h2 style="color: white">Peltoautonani on Peugeot 406, valitettavasti.</h2>
-            <h1>&nbsp</h1>
-    <h1>&nbsp</h1>
-    <h1>&nbsp</h1>
-    <h1>&nbsp</h1>
-    <h1>&nbsp</h1>
-    <h1>&nbsp</h1>
-    <h1>&nbsp</h1>
-    <h3>&nbsp</h3>
-        </div>
-        </center>
+            <h2 style="color: white">Peltoautonani oli Peugeot 406, valitettavasti. Kortin saatuani on edustusautonani Ford Focus.</h2>
+            <div class="child">
+                <img src="media/peugeot.jpg" width="300" height="300"></img>
+            </div>
+            <div class="child">
+                <img src="media/ford.png" width="300" height="300"></img>
+            </div>
+        <h3>&nbsp</h3>
+    </div>
+    </center>
 </body>
 <center>
     @Henri Mykrä Tivi21A
