--- a/kukaolen.html
+++ b/kukaolen.html
@@ -33,25 +33,23 @@
     <hr>
     <h3>Olen Henri Mykrä.</h3>
     <h3>Opiskelen ohjelmistokehittäjäksi Esedulla.</h3>
-    <h3>Olen 17-vuotias miehenalku ja olen asunut tähän asti koko elämäni Mikkelissä.</h3>
+    <h3>Olen 18-vuotias miehenalku ja olen asunut tähän asti koko elämäni Mikkelissä.</h3>
     <h3>Olen kiinnostunut tieto- ja viestintätekniikasta ja haluaisin aikuisena ohjelmoida vaikka sovelluksia ja nettisivuja.</h3>
     <hr>
     <h1><a href="harrastukseni.html">Harrastukseni</a></h1>
     <hr>
     <h1>Osaaminen?</h1>
-    <ul>
-        <li>HTML + CSS</li>
-        <li>Java perusteet</li>
-        <li>Office perusteet</li>
-        <li>Kuvankäsittely</li>
-        <li>Videoeditointi</li>
-        <li>Javascript</li>
-        <li>Full Stack Open</li>
-    </ul>
+    <p>HTML + CSS</p>
+    <p>Java perusteet</p>
+    <p>Office perusteet</p>
+    <p>Kuvankäsittely</p>
+    <p>Videoeditointi</p>
+    <p>Javascript</p>
+    <p>Full Stack Open</p>
     <hr>
     <h1>Koulutukset</h1>
-    <h3>Olen käynyt peruskoulun Kalevankankaan koululla, keskiarvoa en muista.</h3>
-    <h3>Tällä hetkellä opiskelen ohjelmointia <a href="http://www.esedu.fi" target="_blank" rel= "noopener noreferrer">Etelä-Savon ammattiopistolla</a> ja suoritan samalla kaksoistutkintoa Mikkelin lukiolla.</h3>
+    <h3>Olen käynyt peruskoulun Kalevankankaan koululla, keskiarvoa en muista. 8.xx.</h3>
+    <h3>Tällä hetkellä opiskelen ohjelmointia <a href="http://www.esedu.fi" target="_blank" rel= "noopener noreferrer">Etelä-Savon ammattiopistolla</a>.</h3>
     <hr>
     <h1><a href="tyohistoria.html">Työkokemus</a></h1>
 </center>
