--- a/tyonaytteet.html
+++ b/tyonaytteet.html
@@ -13,6 +13,7 @@
             <button type="button">&#8592</button>
         </a>
         <div class="tyonaytteet">
+        <h1><a href="https://github.com/Alsprite">Githubini</a></h1>
         <h1>Tekemiäni projekteja</h1>
         <hr>
         <div class="child">
@@ -25,6 +26,12 @@
             <h2>Pelit</h2>
             <a href="pelit.html">
                 <img src="JSjutut/amis-breakout/screenshot.jpg" width="240" height="240">
+            </a>
+        </div>
+        <div class="child">
+            <h2>Full Stack Open</h2>
+            <a href="fullstack.html">
+                <img src="media/error.jpg" width="240" height="240">
             </a>
         </div>
         <br>
