--- a/pelit.html
+++ b/pelit.html
@@ -18,37 +18,30 @@
     <div class="pelit">
         <h1>Pelit</h1>
         <hr>
-    <div class="child">
         <h2>Cookie Clicker</h2>
         <a href="JSjutut/clicker.html">
-            <img src="media/keksi.png" width="160" height="160" id="peliKuvat">
+            <img src="media/keksi.png" width="250" height="250" id="peliKuvat">
         </a>
-    </div>
-    <div class="child">
         <h2>Juurespeli</h2>
         <a href="JSjutut/juurespeli.html">
-            <img src="media/js/juurespeli.jpg" width="160" height="160" id="peliKuvat">
+            <img src="media/js/juurespeli.jpg" width="250" height="250" id="peliKuvat">
         </a>
-    </div>
-    <div class="child">
         <h2>Sikanoppapeli</h2>
         <a href="JSjutut/sikanoppapeli.html">
-            <img src="JSjutut/juurespeliKuvat/6.png" width="160" height="160" id="peliKuvat">
+            <img src="JSjutut/juurespeliKuvat/6.png" width="250" height="250" id="peliKuvat">
         </a>
-    </div>
     <br>
-    <div class="child">
-        <h2>Amis Breakout</h2>
+
+        <h2><a href="https://github.com/R3adyPro/atari-breakout">Amis Breakout</a></h2>
         <a href="JSjutut/amis-breakout/index.html">
-            <img src="JSjutut/amis-breakout/screenshot.jpg" width="160" height="160" id="peliKuvat">
+            <img src="JSjutut/amis-breakout/screenshot.jpg" width="250" height="250" id="peliKuvat">
         </a>
         <p>Peli tehty kolmen hengen ryhmässä kahdessa viikossa käyttäen JavaScriptin Canvas API:a</p>
-    </div>
     <br>
     <div class="child">
-        <h2>Kierrätyspeli</h2>
+        <h2><a href="https://github.com/Alsprite/kierratyspeli">Kierrätyspeli</a></h2>
         <a href="JSjutut/kierratyspeli/index.html">
-            <img src="JSjutut/kierratyspeli/kuvat/perus.png" width="160" height="160" id="peliKuvat">
+            <img src="JSjutut/kierratyspeli/kuvat/perus.png" width="250" height="250" id="peliKuvat">
         </a>
         <p>3-kielinen kahden hengen ryhmässä noin kolmessa viikossa näytöksi tehty kierrätyspeli</p>
     </div>
