--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div class="child">
         <h2>Kuka olen?</h2>
         <a href="kukaolen.html">
-            <img src="media/kukaolen.png" width="160" height="160" id="menukuvat">
+            <img src="media/kukaolen.png" width="240" height="240" id="projektiKuvat">
         </a>
     </div>
     <div class="child">
         <h2>Työnäytteet?</h2>
         <a href="tyonaytteet.html">
-            <img src="media/keksi.png" width="160" height="160" id="menukuvat">
+            <img src="media/keksi.png" width="240" height="240" id="projektiKuvat">
         </a>
     </div>
     <div class="child">
         <h2>Some?</h2>
-            <img src="media/facebook.png" width="160" height="160" id="menukuvat">
+            <img src="media/facebook.png" width="240" height="240" id="projektiKuvat">
     </div>
 </div>
 @Henri Mykrä TiVi21A
