--- a/pelit.html
+++ b/pelit.html
@@ -20,28 +20,28 @@
         <hr>
         <h2>Cookie Clicker</h2>
         <a href="JSjutut/clicker.html">
-            <img src="media/keksi.png" width="250" height="250" id="peliKuvat">
+            <img src="media/keksi.png" width="240" height="240" id="peliKuvat">
         </a>
         <h2>Juurespeli</h2>
         <a href="JSjutut/juurespeli.html">
-            <img src="media/js/juurespeli.jpg" width="250" height="250" id="peliKuvat">
+            <img src="media/js/juurespeli.jpg" width="240" height="240" id="peliKuvat">
         </a>
         <h2>Sikanoppapeli</h2>
         <a href="JSjutut/sikanoppapeli.html">
-            <img src="JSjutut/juurespeliKuvat/6.png" width="250" height="250" id="peliKuvat">
+            <img src="JSjutut/juurespeliKuvat/6.png" width="240" height="240" id="peliKuvat">
         </a>
     <br>
 
         <h2><a href="https://github.com/R3adyPro/atari-breakout">Amis Breakout</a></h2>
         <a href="JSjutut/amis-breakout/index.html">
-            <img src="JSjutut/amis-breakout/screenshot.jpg" width="250" height="250" id="peliKuvat">
+            <img src="JSjutut/amis-breakout/screenshot.jpg" width="240" height="240" id="peliKuvat">
         </a>
         <p>Peli tehty kolmen hengen ryhmässä kahdessa viikossa käyttäen JavaScriptin Canvas API:a</p>
     <br>
     <div class="child">
         <h2><a href="https://github.com/Alsprite/kierratyspeli">Kierrätyspeli</a></h2>
-        <a href="JSjutut/kierratyspeli/index.html">
-            <img src="JSjutut/kierratyspeli/kuvat/perus.png" width="250" height="250" id="peliKuvat">
+        <a href="https://it.esedu.fi/~juho.riipinen/kierratyspeli/kierratyspeli.html">
+            <img src="JSjutut/kierratyspeli/kuvat/perus.png" width="240" height="240" id="peliKuvat">
         </a>
         <p>3-kielinen kahden hengen ryhmässä noin kolmessa viikossa näytöksi tehty kierrätyspeli</p>
     </div>
