--- a/sovellukset.html
+++ b/sovellukset.html
@@ -49,7 +49,9 @@
             <img src="JSjutut/usecase/tausta.jpg" width="160" height="160" id="sovellusKuvat">
         </a>
         <p>Sovellus tehty Use case-kaavion pohjalta</p>
+        <p><a href="https://github.com/Alsprite/usecasehommat">Source code</a></p>
     </div>
     </div>
+    @Henri Mykrä TiVi21A
 </body>
 </html>
