--- a/tyonaytteet.html
+++ b/tyonaytteet.html
@@ -19,19 +19,19 @@
         <div class="child">
             <h2>Sovellukset</h2>
             <a href="sovellukset.html">
-                <img src="media/js/muunnin.jpg" width="240" height="240">
+                <img src="media/js/muunnin.jpg" width="240" height="240" id="projektiKuvat">
             </a>
         </div>
         <div class="child">
             <h2>Pelit</h2>
             <a href="pelit.html">
-                <img src="JSjutut/amis-breakout/screenshot.jpg" width="240" height="240">
+                <img src="JSjutut/amis-breakout/screenshot.jpg" width="240" height="240" id="projektiKuvat">
             </a>
         </div>
         <div class="child">
             <h2>Full Stack Open</h2>
             <a href="fullstack.html">
-                <img src="media/error.jpg" width="240" height="240">
+                <img src="media/error.jpg" width="240" height="240" id="projektiKuvat">
             </a>
         </div>
         <br>
@@ -49,5 +49,6 @@
         </a>
     </div>
 </div>
+@Henri Mykrä TiVi21A
 </body>
 </html>
