--- a/fullstack.html
+++ b/fullstack.html
@@ -25,5 +25,6 @@
             <h3><a href="https://github.com/Alsprite/fullstack3">Osa 10 - React Native</a></h3>
             <h3><a href="https://github.com/Alsprite/fullstack4">Osa 13</a></h3>
     </div>
+    @Henri Mykrä TiVi21A
 </body>
 </html>
